fixing visibility of modal close button

--- a/_components.scss
+++ b/_components.scss
@@ -102,8 +102,8 @@ nav {
   position: fixed;
   width: 1.5rem;
   height: 1.5rem;
-  top: 1%;
-  left: 0.5%;
+  top: 6%;
+  left: 9%;
   background-color: white;
   border-radius: 50%;
   border: none;
