--- a/main.css
+++ b/main.css
@@ -159,8 +159,8 @@ nav ul li:hover {
   position: fixed;
   width: 1.5rem;
   height: 1.5rem;
-  top: 1%;
-  left: 0.5%;
+  top: 6%;
+  left: 9%;
   background-color: white;
   border-radius: 50%;
   border: none;
@@ -266,7 +266,8 @@ nav ul li:hover {
   display: block;
   width: 100%;
   border-radius: 0.625em;
-  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.2), 0 0.375em 1.25em 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.2),
+    0 0.375em 1.25em 0 rgba(0, 0, 0, 0.19);
 }
 @media (min-width: 48rem) {
   .about-me__text {
@@ -279,7 +280,8 @@ nav ul li:hover {
   }
 }
 @media (min-width: 48rem) {
-  .about-me__subtitle, .about-me__text {
+  .about-me__subtitle,
+  .about-me__text {
     grid-column: 2/4;
     grid-row: 1;
   }
@@ -351,8 +353,8 @@ nav ul li:hover {
   }
 }
 .projects .featured {
-  grid-column: 1/span 2;
-  grid-row: 1/span 2;
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 2;
 }
 .projects img {
   width: 100%;
@@ -361,9 +363,11 @@ nav ul li:hover {
 .projects__item {
   position: relative;
   overflow: hidden;
-  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.5), 0 0.375em 1.25em 0 rgba(0, 0, 0, 0.22);
+  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.5),
+    0 0.375em 1.25em 0 rgba(0, 0, 0, 0.22);
 }
-.projects__item:hover figcaption, .projects__item:focus figcaption {
+.projects__item:hover figcaption,
+.projects__item:focus figcaption {
   top: 0;
 }
 .projects__heading {
@@ -557,18 +561,19 @@ form {
     height: 10rem;
   }
   form .btn,
-form .contact__button {
+  form .contact__button {
     grid-area: button;
   }
 }
 @media (min-width: 48rem) and (min-width: 48rem) {
   form .btn,
-form .contact__button {
+  form .contact__button {
     font-size: 2.5vw;
   }
   form .btn:hover,
-form .contact__button:hover {
-    box-shadow: 0 0.25em 0.5em 0 rgba(114, 225, 209, 0.5), 0 0.375em 1.25em 0 rgba(114, 225, 209, 0.22);
+  form .contact__button:hover {
+    box-shadow: 0 0.25em 0.5em 0 rgba(114, 225, 209, 0.5),
+      0 0.375em 1.25em 0 rgba(114, 225, 209, 0.22);
   }
 }
 
@@ -592,7 +597,8 @@ textarea {
   font-size: 1.2rem;
   width: 100%;
   margin-top: 0.1rem;
-  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.05), 0 0.375em 1.25em 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.05),
+    0 0.375em 1.25em 0 rgba(0, 0, 0, 0.05);
 }
 input:focus,
 textarea:focus {
